--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,11 +1,15 @@
+
 .app__navbar {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background: var(--color-black);
-
     padding: 1rem 2rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
 }
 
 .app__navbar-logo {
@@ -23,7 +27,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
     list-style: none;
 }
 
@@ -70,7 +73,6 @@
     height: 100vh;
     background: var(--color-black);
     transition: .5s ease;
-
     flex-direction: column;
     z-index: 5;
 }
@@ -79,7 +81,6 @@
     font-size: 27px;
     color: var(--color-golden);
     cursor: pointer;
-
     position: absolute;
     top: 20px;
     right: 20px;
