--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ code {
   --font-alt: 'Open Sans', sans-serif;
   
   --color-golden: #DCCA87;
-  --color-black: #0C0C0C;
+  --color-black: #151414;
   --color-gray: #545454;
   --color-crimson: #F5EFDB;
   --color-grey: #AAAAAA;
